# dit

./: .gitignore  README.md  cabal.project
aki/: CHANGELOG.md  aki.cabal
aki/src/: Aki.hs
misstro/: CHANGELOG.md  LICENSE  misstro.cabal
misstro/app/: Main.hs
misstro/src/: Misstro.hs
misstro/src/Misstro/: Blocklist.hs
rofi-sdcv/: CHANGELOG.md  rofi-sdcv.cabal
rofi-sdcv/app/: Main.hs
